[tool.poetry]
name = "ml-ac"
version = "0.1.0"
description = ""
authors = ["Vanita K"]

[tool.poetry.dependencies]
python = "3.8.1"
pandas = "^1.2.5"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"
streamlit = "^0.78.0"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
